--- a/arxiv/2021_06_arxiv.html
+++ b/arxiv/2021_06_arxiv.html
@@ -266,7 +266,29 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.12610">https://arxiv.org/abs/2106.12610</a></span> Mean string field theory: Landau-Ginzburg theory for 1-form symmetries ***** (John McGreevy)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.12601">https://arxiv.org/abs/2106.12601</a></span> The dynamical exponent of a quantum critical itinerant ferromagnet: a Monte Carlo study (Yuxuan Wang, Kai Sun, Andrey V. Chubukov, Zi Yang Meng)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.12724">https://arxiv.org/abs/2106.12724</a></span> Superconductivity-Induced Spectral Weight Transfer due to Quantum Geometry *** (Junyeong Ahn, Naoto Nagaosa)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.12775">https://arxiv.org/abs/1911.12775</a></span> Kerr-Newman stress-tensor from minimal coupling (Yu-tin Huang, Jung-Wook Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.12775">https://arxiv.org/abs/1911.12775</a></span> Kerr-Newman stress-tensor from minimal coupling (Yu-tin Huang, Jung-Wook Kim)</p><br>
+<p class="p1">20210628</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.13400">https://arxiv.org/abs/2106.13400</a></span> Emergent gapless topological Luttinger liquid</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.13491">https://arxiv.org/abs/2106.13491</a></span> Specific Heat and the gap structure of a Nematic Superconductor, application to FeSe **** (Ilya M. Eremin, Andrey V. Chubukov)</p>
+<p class="p2"><br></p>
+<p class="p1">20210629</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.14553">https://arxiv.org/abs/2106.14553</a></span> Hawking fragmentation and Hawking attenuation in Weyl semimetals ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.14849">https://arxiv.org/abs/2106.14849</a></span> Superconductivity in an extreme strange metal ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.14125">https://arxiv.org/abs/2106.14125</a></span> Classical spin dynamics based on SU(<span class="s2">𝑁</span>) coherent states ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.03363">https://arxiv.org/abs/2102.03363</a></span> Quantum scalar field theories with fractional operators</p>
+<p class="p2"><br></p>
+<p class="p1">20210630</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.15095">https://arxiv.org/abs/2106.15095</a></span> Emerging SYK physics in polaron system</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.15062">https://arxiv.org/abs/2106.15062</a></span> The Axial Anomaly in Lorentz Violating Theories: Towards the Electromagnetic Response of Weakly Tilted Weyl Semimetals *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.14914">https://arxiv.org/abs/2106.14914</a></span> Non-Hermitian Higher-Order Dirac Semimetals (Masatoshi Sato, Taylor L. Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.14911">https://arxiv.org/abs/2106.14911</a></span> Higher-order van Hove singularity in magic-angle twisted trilayer graphene ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.14905">https://arxiv.org/abs/2106.14905</a></span> TSTG II: Projected Hartree-Fock Study of Twisted Symmetric Trilayer Graphene (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.15152">https://arxiv.org/abs/2106.15152</a></span> Three-dimensional lattice SU(Nc) gauge theories with multiflavor scalar fields in the adjoint representation (Ettore Vicari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.15108">https://arxiv.org/abs/2106.15108</a></span> Attaining entropy production and dissipation maps from Brownian movies via neural networks (Hawoong Jeong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.15033">https://arxiv.org/abs/2106.15033</a></span> Quasiparticle scattering in a superconductor near a nematic critical point – resonance mode and multiple attractive channels (Dimitri Pimenov, Alex Kamenev, Andrey V. Chubukov)<br>
+<a href="https://arxiv.org/abs/2106.15573"><span class="s1">https://arxiv.org/abs/2106.15573</span></a> Band Structure and Superconductivity in Twisted Trilayer Graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.14910">https://arxiv.org/abs/2106.14910</a></span> Metal-Insulator Transition with Charge Fractionalization (Yichen Xu, Zhu-Xi Luo, Chao-Ming Jian, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.15598">https://arxiv.org/abs/2106.15598</a></span> Sigma models as Gross-Neveu models</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
