--- a/arxiv/2021_07_arxiv.html
+++ b/arxiv/2021_07_arxiv.html
@@ -249,7 +249,47 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.10842">https://arxiv.org/abs/2107.10842</a></span> Symmetric Jordan-Wigner transformation in higher dimensions ***** (Hoi Chun Po)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.10681">https://arxiv.org/abs/2107.10681</a></span> A GROUPOID APPROACH TO INTERACTING FERMIONS</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.14797">https://arxiv.org/abs/2006.14797</a></span> MASS GAP IN U(1) HIGGS-YUKAWA MODEL ON A UNIT LATTICE **</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.09020">https://arxiv.org/abs/2107.09020</a></span> On conformality and self-duality of Nf = 2 QED3</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.09020">https://arxiv.org/abs/2107.09020</a></span> On conformality and self-duality of Nf = 2 QED3</p><br>
+<p class="p1">20210726</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.11177">https://arxiv.org/abs/2107.11177</a></span> Topological aspects of the critical three-state Potts model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.10854">https://arxiv.org/abs/2107.10854</a></span> Fractional Chern insulators in magic-angle twisted bilayer graphene (Yuan Cao, Ashvin Vishwanath, Pablo Jarillo-Herrero, Amir Yacoby)</p>
+<p class="p2"><br></p>
+<p class="p1">20210727</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.11464">https://arxiv.org/abs/2107.11464</a></span> Tensor RG approach to high-temperature fixed point</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.11656">https://arxiv.org/abs/2107.11656</a></span> On the phase diagram of 1+1D Abelian-Higgs model and its critical point ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.11396">https://arxiv.org/abs/2107.11396</a></span> Stability of ground state degeneracy to long-range interactions (Matthew F. Lapa, Michael Levin)<br>
+<a href="https://arxiv.org/abs/2107.12256"><span class="s1">https://arxiv.org/abs/2107.12256</span></a> Interacting spinless fermions on the square lattice: charge order, phase separation, and superconductivity</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.12251">https://arxiv.org/abs/2107.12251</a></span> Probing Quantization Via Branes (Davide Gaiotto, Edward Witten)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.01000">https://arxiv.org/abs/2103.01000</a></span> Duality Symmetry of Quantum Electrodynamics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.10466">https://arxiv.org/abs/2011.10466</a></span> Phonons, electrons and thermal transport in Planckian high Tc materials (Sean A. Hartnoll)</p>
+<p class="p2"><br></p>
+<p class="p1">20210728</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.12388">https://arxiv.org/abs/2107.12388</a></span> Non-Abelian bosonization in a (3 + 1)-d Kondo semimetal via quantum anomalies (Victor Galitski)</p>
+<p class="p2"><br></p>
+<p class="p1">20210729</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13510">https://arxiv.org/abs/2107.13510</a></span> Probing Fermi liquid exceptional points through AC conductivity ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13458">https://arxiv.org/abs/2107.13458</a></span> Magnetism in heavy-f-electron metals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13364">https://arxiv.org/abs/2107.13364</a></span> Unveiling the S=3/2 Kitaev Honeycomb Spin Liquids *** (F. Pollmann, J. Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13448">https://arxiv.org/abs/2107.13448</a></span> Breakdown of the Wiedemann-Franz law at the Lifshitz point of strained Sr2RuO4 (Erez Berg, Jörg Schmalian)</p>
+<p class="p2"><br></p>
+<p class="p1">20210730</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13572">https://arxiv.org/abs/2107.13572</a></span> Sign-Problem-Free Variant of Complex Sachdev-Ye-Kitaev Model ***** (Byungmin Kang, Junggi Yoon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13762">https://arxiv.org/abs/2107.13762</a></span> Thermoelectric properties and Wiedemann-Franz like relations in mixed-dimensional QEDs from particle-vortex dualities</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13556">https://arxiv.org/abs/2107.13556</a></span> Non-Compact Atomic Insulators (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13974">https://arxiv.org/abs/2107.13974</a></span> 2n-root weak, Chern and higher-order topological insulators and 2n-root topological semimetals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13574">https://arxiv.org/abs/2107.13574</a></span> Projective symmetry group classification of chiral Z2 spin liquids on the pyrochlore lattice: application to the spin-1/2 XXZ Heisenberg model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13777">https://arxiv.org/abs/2107.13777</a></span> Fractional Skyrmion molecules in a CPN−1 model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13784">https://arxiv.org/abs/2107.13784</a></span> Fine structure of the nonlinear Drude weights in the spin-1/2 XXZ chain *** (Hosho Katsura)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13563">https://arxiv.org/abs/2107.13563</a></span> Thermalization dynamics of a gauge theory on a quantum simulator ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13679">https://arxiv.org/abs/2107.13679</a></span> On the ε = d − 2 expansion of the Ising model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13884">https://arxiv.org/abs/2107.13884</a></span> Fractons, Symmetric Gauge Fields and Geometry ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.14083">https://arxiv.org/abs/2107.14083</a></span> Higher-dimensional Jordan-Wigner Transformation and Auxiliary Majorana Fermions ***** (Hoi Chun Po)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.14191">https://arxiv.org/abs/2107.14191</a></span> Ontology in quantum mechanics (Gerard ’t Hooft)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13593">https://arxiv.org/abs/2107.13593</a></span> Models of Hidden Purity (Frank Wilczek)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2107.14200">https://arxiv.org/abs/2107.14200</a><span class="s2"> Holography of time machines</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.14012">https://arxiv.org/abs/2107.14012</a></span> QED in the Exact Renormalization Group</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.14176">https://arxiv.org/abs/2107.14176</a></span> ALGEBRAIC QUANTUM FIELD THEORY: A HOMOTOPICAL VIEW</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13834">https://arxiv.org/abs/2107.13834</a></span> Conformal field theory from lattice fermions ****</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
