--- a/arxiv/2021_08_arxiv.html
+++ b/arxiv/2021_08_arxiv.html
@@ -125,7 +125,106 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
-<p class="p1">20210801</p>
+<p class="p1">20210802</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.14271">https://arxiv.org/abs/2107.14271</a></span> Field Theoretical Study of Disorder in Non-Hermitian Topological Models ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.14637">https://arxiv.org/abs/2107.14637</a></span> Conformal bootstrap bounds for the U(1) Dirac spin liquid and N = 7 Stiefel liquid (Yin-Chen He)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.14340">https://arxiv.org/abs/2107.14340</a></span> Interplay between superconductivity and non-Fermi liquid at a quantum-critical point in a metal. VI. The γ model and its phase diagram at 2 &lt; γ &lt; 3 ***** (Yi-Ming Wu, Artem Abano Andrey V. Chubukov)</p>
+<p class="p2"><a href="https://arxiv.org/abs/2107.14488">https://arxiv.org/abs/2107.14488</a><span class="s2"> Some Basic Tools of QFT ******</span></p>
+<p class="p3"><br></p>
+<p class="p1">20210803</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.00240">https://arxiv.org/abs/2108.00240</a></span> Symmetry-Protected Solitons and Bulk-Boundary Correspondence in Generalized Jackiw-Rebbi Models<br>
+<a href="https://arxiv.org/abs/2108.00419"><span class="s1">https://arxiv.org/abs/2108.00419</span></a> Macroscopic quantum tunneling: from quantum vortices to black holes and Universe (G.E. Volovik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.00011">https://arxiv.org/abs/2108.00011</a></span> Distinguishing Random and Black Hole Microstates (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.01010">https://arxiv.org/abs/2108.01010</a></span> Partial Kondo Screening and Anomalous Thermal Conductance (Hee Seung Kim, Hyeok-Jun Yang, SungBin Lee)<br>
+<a href="https://arxiv.org/abs/2108.00961"><span class="s1">https://arxiv.org/abs/2108.00961</span></a> Chiral symmetry breaking through spontaneous dimerization in kagom ́e metals ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.00018">https://arxiv.org/abs/2108.00018</a></span> Topological Order, Quantum Codes and Quantum Computation on Fractal Geometries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.00008">https://arxiv.org/abs/2108.00008</a></span> Crystalline Responses for Rotation-Invariant Higher-Order Topological Insulators (Taylor L. Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.00902">https://arxiv.org/abs/2108.00902</a></span> Chiral anomaly, induced current, and vacuum polarization tensor for a Dirac field in the presence of a defect</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.14562">https://arxiv.org/abs/2107.14562</a></span> Time-Slicing Path-integral in Curved Space</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.07522">https://arxiv.org/abs/2106.07522</a></span> Quantum Computing by Cooling (Frank Wilczek)</p>
+<p class="p3"><br></p>
+<p class="p1">20210804</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.01107">https://arxiv.org/abs/2108.01107</a></span> Strongly coupled phonon fluid and Goldstone modes in a nonlinear quantum solid: transport and chaos ***** (Erez Berg)<br>
+<a href="https://arxiv.org/abs/2108.01586"><span class="s1">https://arxiv.org/abs/2108.01586</span></a> Classification of phase transitions and intertwined orders in crystallographic point groups ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.01460">https://arxiv.org/abs/2108.01460</a></span> Exploring ideas in topological quantum phenomena - A journey through the SSH model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.01560">https://arxiv.org/abs/2108.01560</a></span> TOPOLOGICAL STATES IN QUASICRYSTALS ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2105.14863">https://arxiv.org/abs/2105.14863</a></span> Notes in Pure Mathematics &amp; Mathematical Structures in Physics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.01452">https://arxiv.org/abs/2108.01452</a></span> Non-unitary multiorbital superconductivity from competing interactions in Dirac materials</p>
+<p class="p3"><br></p>
+<p class="p1">20210805</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.01718">https://arxiv.org/abs/2108.01718</a></span> Universal equilibration dynamics of the Sachdev-Ye-Kitaev model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.01708">https://arxiv.org/abs/2108.01708</a></span> Realizing anomalous Floquet insulators via Chern band annihilation **** (Erez Berg)</p>
+<p class="p2"><a href="https://arxiv.org/abs/2108.01845">https://arxiv.org/abs/2108.01845</a><span class="s2"> Anti-PT Flatbands</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.02201">https://arxiv.org/abs/2108.02201</a></span> Testing Quantum Mechanics using Noisy Quantum Computers (Kevin Slagle)</p>
+<p class="p3"><br></p>
+<p class="p1">20210806</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.02211">https://arxiv.org/abs/2108.02211</a></span> Metrology of Band Topology via Resonant Inelastic X-ray Scattering ***** (Sangjin Lee, Kyung-Hwan Jin, Byungmin Kang, B. J. Kim, Gil Young Cho)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.02212">https://arxiv.org/abs/2108.02212</a></span> Pattern-dependent proximity effect and Majorana edge mode in one-dimensional quasicrystals *** (Junmo Jeon, SungBin Lee)<br>
+<a href="https://arxiv.org/abs/2108.02338"><span class="s1">https://arxiv.org/abs/2108.02338</span></a> Sign reversal of Magnetoresistivity in massive nodal-line semimetals due to Lifshitz transition of Fermi surface</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.02414">https://arxiv.org/abs/2108.02414</a></span> Correlation function in interacting flat-band models constructed by molecular-orbital representation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.02469">https://arxiv.org/abs/2108.02469</a></span> Third-harmonic generation in excitonic insulators ***</p>
+<p class="p3"><br></p>
+<p class="p1">20210809</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.02835">https://arxiv.org/abs/2108.02835</a></span> Electron Spin Resonance of the Interacting Spinon Liquid (Oleg A. Starykh)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.02793">https://arxiv.org/abs/2108.02793</a></span> A detector-based measurement theory for quantum field theory</p>
+<p class="p3"><br></p>
+<p class="p1">20210810</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.03934">https://arxiv.org/abs/2108.03934</a></span> Interplay of the orbital magnetic moment and the chiral magnetic effect in Shubnikov-de Haas quantum oscillations *** (Ki-seok Kim)<br>
+<a href="https://arxiv.org/abs/2108.04156"><span class="s1">https://arxiv.org/abs/2108.04156</span></a> Violation of the Wiedemann-Franz law in the Topological Kondo model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.03976">https://arxiv.org/abs/2108.03976</a></span> Confinement induced impurity states in spin chains (Johannes Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.03313">https://arxiv.org/abs/2108.03313</a></span> Non-local interactions in moir ́e Hubbard systems (Allan H. MacDonald)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.03835">https://arxiv.org/abs/2108.03835</a></span> Schwinger boson approach for the dynamical mean-field theory of the Kondo lattice</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.04158">https://arxiv.org/abs/2108.04158</a></span> Spin-orbit effects in pentavalent Iridates: Models and materials</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.03771">https://arxiv.org/abs/2108.03771</a></span> A brief account of Steven Weinberg’s legacy in ab initio many-body theory Special issue in Few-Body Systems: Celebrating 30 years of Steven Weinberg’s papers on Nuclear Forces from Chiral Lagrangians *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.04028">https://arxiv.org/abs/2108.04028</a></span> Effective Field Theory of Quantum Black Holes ***</p>
+<p class="p3"><br></p>
+<p class="p1">20210811</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.04285">https://arxiv.org/abs/2108.04285</a></span> The Phenomenological Motivation of Axions: A Review</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.04369">https://arxiv.org/abs/2108.04369</a></span> RG Flow and Symmetry Breaking in a Weakly Coupled Model **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.12388">https://arxiv.org/abs/2107.12388</a></span> Non-Abelian bosonization in a (3 + 1)-d Kondo semimetal via quantum anomalies ***** (Victor Galitski)</p>
+<p class="p2"><a href="https://arxiv.org/abs/2108.04767">https://arxiv.org/abs/2108.04767</a><span class="s2"> Symmetries and Riemann Invariants</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.04252">https://arxiv.org/abs/2108.04252</a></span> Strained Bilayer Graphene, Emergent Energy Scales, and Moir ́e Gravity **** (Victor Galitski)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.04372">https://arxiv.org/abs/2108.04372</a></span> Free parafermionic Z(N) and free fermionic XY quantum chains</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.04534">https://arxiv.org/abs/2108.04534</a></span> The generalized Nielsen-Ninomiya Theorem for the 17 wallpaper: Classification of 2D nodal superconductors, Dirac semimetals, and non-Hermitian nodal systems *****</p>
+<p class="p3"><br></p>
+<p class="p1">20210812</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.04846">https://arxiv.org/abs/2108.04846</a></span> Many-body selection rule for quasiparticle pair creations in centrosymmetric superconductors **** (Junyeong Ahn, Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.05334">https://arxiv.org/abs/2108.05334</a></span> SU(4) symmetry in twisted bilayer graphene - an itinerant perspective ***** (Yuxuan Wang, Andrey V. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.05044">https://arxiv.org/abs/2108.05044</a></span> Spin-orbital entangled state and realization of Kitaev physics in 3d cobalt compounds: a progress report (Heung-Sik Kim, Je-Geun Park)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.04997">https://arxiv.org/abs/2108.04997</a></span> Charge density waves in multiple-Q spin states (Yukitoshi Motome)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.04831">https://arxiv.org/abs/2108.04831</a></span> Theory of Hofstadter Superconductors **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.05113">https://arxiv.org/abs/2108.05113</a></span> Quantum Many-Body Scars and Quantum Criticality ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.06387">https://arxiv.org/abs/2103.06387</a></span> Weinberg’s proposal of 1990: A very personal view *****</p>
+<p class="p3"><br></p>
+<p class="p1">20210813</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.05374">https://arxiv.org/abs/2108.05374</a></span> Plasmonic photonic crystal mirror for long-lived interlayer exciton generation (Sanghyeok Park, Dongha Kim, Min-Kyo Seo)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.05360">https://arxiv.org/abs/2108.05360</a></span> Topologically enabled superconductivity **** (Elio J. K ̈onig, J ̈org Schmalian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.05810">https://arxiv.org/abs/2108.05810</a></span> Emergent Symmetry in Brownian SYK Models and Charge Dependent Scrambling ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.05371">https://arxiv.org/abs/2108.05371</a></span> Thermal QCD Axions across Thresholds (Seokhoon Yun)</p>
+<p class="p3"><br></p>
+<p class="p1">20210816</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.05922">https://arxiv.org/abs/2108.05922</a></span> Anomalous dimensions of monopole operators at the transitions between Dirac and topological spin liquids ***** (William Witczak-Krempa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.06867">https://arxiv.org/abs/2108.06867</a></span> Analytic structure of the Gap in Holographic superconducrivity (Sang-Jin Sin)</p>
+<p class="p3"><br></p>
+<p class="p1">20210817</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.06346">https://arxiv.org/abs/2108.06346</a></span> Exotic quantum criticality in Dirac systems: Metallic and deconfined (Matthias Vojta, Lukas Janssen)</p>
+<p class="p3"><br></p>
+<p class="p1">20210818</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.07271">https://arxiv.org/abs/2108.07271</a></span> Disorder induced 2D metal-insulator transition in moir ́e transition metal dichalcogenide multilayers (Seongjin Ahn, Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.07765">https://arxiv.org/abs/2108.07765</a></span> Construction of Fractal Order and Phase Transition with Rydberg Atoms **** (Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.07753">https://arxiv.org/abs/2108.07753</a></span> Quantum-critical continuum in magic-angle twisted bilayer graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.07722">https://arxiv.org/abs/2108.07722</a></span> Converting electrons into emergent fermions at a superconductor-Kitaev spin liquid interface **** (Erez Berg)</p>
+<p class="p3"><br></p>
+<p class="p1">20210819</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.07813">https://arxiv.org/abs/2108.07813</a></span> Embedded Topological Semimetals *** (Taylor L. Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.08183">https://arxiv.org/abs/2108.08183</a></span> How to tune the tilt of a Dirac cone by atomic manipulations? ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.07817">https://arxiv.org/abs/2108.07817</a></span> Deformed Symmetry Structures and Quantum Many-body Scar Subspaces (Chen Fang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.10358">https://arxiv.org/abs/2101.10358</a></span> Scaling of disorder operator at (2 + 1)<span class="s3">𝑑</span> U(1) quantum criticality ***** (Meng Cheng, Zi Yang Meng)</p>
+<p class="p3"><br></p>
+<p class="p1">20210820</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.08526">https://arxiv.org/abs/2108.08526</a></span> Renormalization group analysis of Dirac fermions with random mass ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.08322">https://arxiv.org/abs/2108.08322</a></span> Fractons and exotic symmetries from branes *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.08751">https://arxiv.org/abs/2108.08751</a></span> Spin-Rotational Excitation Bubbles in Hexagonal LuMnO3 (Seung Kim, Sang-Wook Cheong)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
