--- a/arxiv/2021_08_arxiv.html
+++ b/arxiv/2021_08_arxiv.html
@@ -224,7 +224,44 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1">20210820</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.08526">https://arxiv.org/abs/2108.08526</a></span> Renormalization group analysis of Dirac fermions with random mass ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.08322">https://arxiv.org/abs/2108.08322</a></span> Fractons and exotic symmetries from branes *****</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.08751">https://arxiv.org/abs/2108.08751</a></span> Spin-Rotational Excitation Bubbles in Hexagonal LuMnO3 (Seung Kim, Sang-Wook Cheong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.08751">https://arxiv.org/abs/2108.08751</a></span> Spin-Rotational Excitation Bubbles in Hexagonal LuMnO3 (Seung Kim, Sang-Wook Cheong)</p><br>
+<p class="p1">20210823</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.08974">https://arxiv.org/abs/2108.08974</a></span> Quantum Critical Points and the Sign Problem</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.08878">https://arxiv.org/abs/2108.08878</a></span> Footprints of the Kitaev spin liquid in the Fano lineshapes of the Raman active optical phonons (Natalia B. Perkins)</p>
+<p class="p2"><br></p>
+<p class="p1">20210824</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.11848">https://arxiv.org/abs/2103.11848</a></span> Effect of superconductivity on the shape of flat bands ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.14661">https://arxiv.org/abs/2103.14661</a></span> Temperature evolution of the phonon dynamics in the Kitaev spin liquid (Natalia B. Perkin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.07817">https://arxiv.org/abs/2108.07817</a></span> Deformed Symmetry Structures and Quantum Many-body Scar Subspaces (Chen Fang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.09480">https://arxiv.org/abs/2108.09480</a></span> Zero Sound And Plasmon Modes For Non-Fermi Liquids **** (Ipsita Mandal)</p>
+<p class="p2"><br></p>
+<p class="p1">20210825</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.10325">https://arxiv.org/abs/2108.10325</a></span> Emergent continuous symmetry in anisotropic flexible two-dimensional materials *** (J. Schmalian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.10329">https://arxiv.org/abs/2108.10329</a></span> The case of SU(3) criticality in spin-2 chains ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.10342">https://arxiv.org/abs/2108.10342</a></span> Degradation of phonons in disordered moiré superlattices ** (Rafael M. Fernandes)<br>
+<a href="https://arxiv.org/abs/2108.10616"><span class="s1">https://arxiv.org/abs/2108.10616</span></a> Bosonic fluctuations in the (1 + 1)-dimensional Gross-Neveu(-Yukawa) model at varying μ and T and finite N ****</p>
+<p class="p2"><br></p>
+<p class="p1">20210826</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.10897">https://arxiv.org/abs/2108.10897</a></span> Higher-order topological superconductivity from repulsive interactions in kagome and honeycomb systems ****</p>
+<p class="p2"><br></p>
+<p class="p1">20210827</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.11484">https://arxiv.org/abs/2108.11484</a></span> Phonon induced rank-2 U(1) nematic liquid states ***** (Han Yan)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.11392">https://arxiv.org/abs/2108.11392</a></span> Quantum critical Eliashberg theory, the SYK superconductor and their holographic duals ***** (J ̈org Schmalian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.11406">https://arxiv.org/abs/2108.11406</a></span> N = 4 chiral superconductivity in moir ́e transition metal dichalcogenides (Michael M. Scherer, Laura Classen)</p>
+<p class="p2"><br></p>
+<p class="p1">20210830</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.12416">https://arxiv.org/abs/2108.12416</a></span> Inherited topological superconductivity in two-dimensional Dirac semimetals ** (Hoi Chun Po)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.11973">https://arxiv.org/abs/2108.11973</a></span> Phase transition in von Neumann entanglement entropy from replica symmetry breaking **** (Shao-Kai Jian, Brian Swingle)</p>
+<p class="p2"><br></p>
+<p class="p1">20210831</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.13385">https://arxiv.org/abs/2108.13385</a></span> On the signatures of non-topological patches on the surface of topological insulators (Jay D. Sau)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.12564">https://arxiv.org/abs/2108.12564</a></span> Global 4-group symmetry and ’t Hooft anomalies in topological axion electrodynamics ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.12884">https://arxiv.org/abs/2108.12884</a></span> Critical Quenches, OTOCs and Early-Time Chaos **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.12915">https://arxiv.org/abs/2108.12915</a></span> Honeycomb-structure RuI3, a new quantum material related to <i>α</i>-RuCl3</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.13000">https://arxiv.org/abs/2108.13000</a></span> Chiral Phonons in Moir ́e Superlattices **** (Chong Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.13133">https://arxiv.org/abs/2108.13133</a></span> Five loop renormalization of the Wess-Zumino model ***** (J.A. Gracey)<br>
+<a href="https://arxiv.org/abs/2108.12559"><span class="s1">https://arxiv.org/abs/2108.12559</span></a> Dynamic properties of collective excitations in twisted bilayer Graphene (Kai Sun, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.12860">https://arxiv.org/abs/2108.12860</a></span> Symmetry-protected quantization of complex Berry phases in non-Hermitian systems (Hosho Katsura)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
